--- a/css/style.css
+++ b/css/style.css
@@ -45,20 +45,26 @@ body {
     align-items: center;
     gap: 20px
 }
+.links {
+    list-style-type: none;
+}
 
 .left-container .links{
     display: flex;
     gap: 25px;
-    list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
-.left-container .links a {
+a {
     text-decoration: none;
+}
+
+.left-container .links a {
     color: rgb(60, 59, 59);
     font-weight: 600;
 }
+
 .left-container .links a:hover{
     color: #00d084;
     transition: all .17s ease-in-out;
@@ -88,7 +94,8 @@ button:hover {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 80vh;
+    height: 75vh;
+    font-size: 12px;
     width: 100%;
 }
 
@@ -97,15 +104,17 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     color: white;
-    padding-left: 200px
+    padding-left: 215px;
+    gap: 20px;
 }
 
 .content-header h1 {
     font-size: 48px;
+    margin-bottom: 20px;
 }
 
 .content-header input {
-    padding: 15px 100px 10px 20px;
+    padding: 15px 80px 10px 20px;
     border-radius: 50px;
     text-align: left;
     font-weight: 550;
@@ -120,4 +129,28 @@ button:hover {
 .apply-container {
     display: flex;
     gap: 20px;
+}
+
+.content-header a {
+    color: white;
+}
+
+.sponsors {
+    display: block;
+    background-color: linear-gradient(135deg,rgb(238,238,238) 0%,rgb(169,184,195) 100%);
+    width: 100%;
+    height: 15vh;
+}
+
+.sponsors .links {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    gap: 40px;
+    width: 100%;
+}
+
+.sponsors img {
+    width: auto;
+    height: 36px;
 }
