--- a/css/style.css
+++ b/css/style.css
@@ -1,223 +1,231 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    font-weight: 600;
-    color: rgb(60, 59, 59);
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  font-weight: 600;
+  color: rgb(60, 59, 59);
+  width: 100%;
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 7px;
-    width: 100%;
-    max-height: 10vh;
-    position: fixed;
-    background-color: #fafafa;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 7px;
+  width: 100%;
+  max-height: 10vh;
+  position: fixed;
+  background-color: #fafafa;
 }
 
 .logo {
-    max-width: 100%;
-    width: 100px;
-    height: auto;
-    cursor: pointer;
+  max-width: 100%;
+  width: 100px;
+  height: auto;
+  cursor: pointer;
 }
 
-.left-container, .right-container{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 20px
+.left-container,
+.right-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
 }
 .links {
-    list-style-type: none;
+  list-style-type: none;
 }
 
-.left-container .links{
-    display: flex;
-    gap: 25px;
-    margin: 0;
-    padding: 0;
+.left-container .links {
+  display: flex;
+  gap: 25px;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .left-container .links a {
-    color: rgb(60, 59, 59);
-    font-weight: 600;
+  color: rgb(60, 59, 59);
+  font-weight: 600;
 }
 
-.left-container .links a:hover{
-    color: #00d084;
-    transition: all .17s ease-in-out;
+.left-container .links a:hover {
+  color: #00d084;
+  transition: all 0.17s ease-in-out;
 }
 
 .login:hover {
-    color: #00d084;
-    transition: all .17s ease-in-out;
-    cursor: pointer;
+  color: #00d084;
+  transition: all 0.17s ease-in-out;
+  cursor: pointer;
 }
 button {
-    border: none;
-    background: #00d084;
-    padding: 15px 50px;
-    border-radius: 50px;
-    font-weight: 600;
+  border: none;
+  background: #00d084;
+  padding: 15px 50px;
+  border-radius: 50px;
+  font-weight: 600;
 }
 
 button:hover {
-    background: #01bf79;
-    transition: .17s ease-in-out;
-    cursor: pointer;
+  background: #01bf79;
+  transition: 0.17s ease-in-out;
+  cursor: pointer;
 }
 
 .content-header {
-    background-image: url(../img/CcS.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    min-height: 83vh;
-    font-size: 12px;
-    width: 100%;
+  background-image: url(../img/CcS.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 83vh;
+  font-size: 12px;
+  width: 100%;
 }
 
 .content-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: white;
-    padding-left: 215px;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  padding-left: 215px;
+  gap: 20px;
 }
 
 .content-header h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
+  font-size: 48px;
+  margin-bottom: 20px;
 }
 
 .content-header input {
-    padding: 15px 80px 10px 20px;
-    border-radius: 50px;
-    text-align: left;
-    font-weight: 550;
+  padding: 15px 80px 10px 20px;
+  border-radius: 50px;
+  text-align: left;
+  font-weight: 550;
 }
 
 .content-header input::placeholder {
-    color: #e6e1e1;
-    font-size: 18px;
-    text-align: left;
+  color: #e6e1e1;
+  font-size: 18px;
+  text-align: left;
 }
 
 .apply-container {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .content-header a {
-    color: white;
+  color: white;
 }
 
 .sponsors {
-    display: block;
-    background-color: rgb(250, 250, 250);
-    width: 100%;
-    padding-bottom: 50px;
-    height: auto;
+  display: block;
+  background-color: rgb(250, 250, 250);
+  width: 100%;
+  padding-bottom: 50px;
+  height: auto;
 }
 
 .sponsors .links {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    gap: 40px;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  gap: 40px;
+  width: 100%;
 }
 
 .sponsors img {
-    width: auto;
-    height: 36px;
+  width: auto;
+  height: 36px;
 }
 
 .content-container {
-    background-image: url(../img/chime-1.png);
-    background-repeat: no-repeat;
-    background-size: 30vmax;
-    background-position:50vw;
-    width: 100%;
-    min-height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    padding-left: 215px;
+  background-image: url(../img/chime-1.png);
+  background-repeat: no-repeat;
+  background-size: 30vmax;
+  background-position: 50vw;
+  width: 100%;
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  padding-left: 215px;
 }
 
 .content-container h2 {
-    font-size: 36px;
+  font-size: 36px;
 }
 
 .content-container p {
-    font-size: 14px;
-    font-weight: 600;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .container-a {
-    color: #7bdcb5;
-    font-weight: 600;
+  color: #7bdcb5;
+  font-weight: 600;
 }
 
 .container-a:hover {
-    color: #01bf79;
-    transition: .17s ease-in-out;
+  color: #01bf79;
+  transition: 0.17s ease-in-out;
 }
 
 .container-set {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 40vh;
-    padding-right: 200px;
-    background-color: rgb(250, 250, 250);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 40vh;
+  padding-right: 200px;
+  background-color: rgb(250, 250, 250);
+  width: 100%;
 }
 
 .img-container {
-    background-image: url(../img/chime-2.png);
-    background-position: 20vw;
-    background-repeat: no-repeat;
-    background-size: 28vmax;
-    min-height: 40vh;
-    min-width: 55vw;
+  background-image: url(../img/chime-2.png);
+  background-position: 20vw;
+  background-repeat: no-repeat;
+  background-size: 28vmax;
+  min-height: 40vh;
+  min-width: 55vw;
 }
 
 .content-containers {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .content-containers h2 {
-    font-size: 36px;
+  font-size: 36px;
 }
 
 .content-containers p {
-    font-weight: 500;
+  font-weight: 500;
+}
+
+.sticky {
+  position: fixed;
+  background-color: rgba(250, 250, 250, 0.9);
+  transition: 0.2s ease-in-out;
 }
